--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -17,3 +17,11 @@
     font-size: 24px;
 
 }
+
+#fourth-element{
+
+    background-color: #90ee90;
+    font-size: 24px;
+    font-weight: bold;
+
+}
