--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -12,19 +12,26 @@ body {
 
 .title {
   background: #e3f4ff;
+  padding: 8px;
+  margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
   padding: 8px;
+  margin: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
   padding: 8px;
+  margin: 8px;
+  
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  padding: 8px;
+  
 }
