--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -14,11 +14,12 @@ body {
   background: #e3f4ff;
   padding: 8px;
   margin: 8px;
+  font-size: 16px;
 }
 
 .content {
   background: #e3f4ff;
-  padding: 8px;
+  padding: 16px 8px;
   margin: 8px;
 }
 
@@ -26,6 +27,7 @@ body {
   background: #e3f4ff;
   padding: 8px;
   margin: 8px;
+  text-align: center;
   
 }
 
@@ -33,5 +35,6 @@ button {
   background: white;
   border: 1px solid #eee;
   padding: 8px;
-  
+  display: block;
+  margin: 0 auto;
 }
