--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -3,6 +3,7 @@
   background: papayawhip;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .logo {
@@ -17,7 +18,7 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  
+ 
 }
 
 a {
