--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -12,13 +12,17 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
- 
+  margin: 0px;
+  padding: 10px;
+  gap: 10px;
+
 }
 
 a {
