--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,8 +2,9 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -12,7 +13,6 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: 10px;
 }
 
 ul {
@@ -20,8 +20,8 @@ ul {
   list-style-type: none;
   display: flex;
   margin: 0px;
-  padding: 10px;
-  gap: 10px;
+  padding: 0px;
+  gap: 8px;
 
 }
 
