add flex properties and set max-width to container 2 div class

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -24,8 +24,18 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+
 }
 
 .container{
   display: flex;
+  
 }
+
+.container2{
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+
+}
+
