--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -11,6 +11,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  padding-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -29,13 +30,13 @@ img {
 
 .container{
   display: flex;
+  justify-content: space-evenly;
   
 }
 
 .container2{
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   max-width: 200px;
-
 }
-
