--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,12 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.one {
+  display: flex;
+  justify-content: space-around;
+}
+
+.two {
+  display: flex;
+}
