add text-align, weight, and padding to divOne

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -70,7 +70,15 @@ button.cancel {
 
 .one {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  text-align: center;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.text{
+  display: flex;
+
 }
 
 .two {
