--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -36,6 +36,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
+
 }
 
 .close-button {
@@ -71,7 +72,7 @@ button.cancel {
   color: royalblue;
 }
 
-.header{
+.container{
   display: flex;
   justify-content: space-between;
 }
