Rename container div to header div/rename one dive to container div

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -72,7 +72,8 @@ button.cancel {
   color: royalblue;
 }
 
-.container{
+.header{
   display: flex;
   justify-content: space-between;
+  padding-left:
 }
