--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -22,6 +22,7 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
   justify-content: space-around;
+  padding: 15px;
 }
 
 .icon {
@@ -76,4 +77,8 @@ button.cancel {
   display: flex;
   justify-content: space-between;
   padding-left:
+}
+
+.container{
+  padding-left: 15px;
 }
