Add font weight and size to header text

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -76,9 +76,15 @@ button.cancel {
 .header{
   display: flex;
   justify-content: space-between;
-  padding-left:
+  font-weight: bold;
+  font-size: 22px;
 }
 
 .container{
   padding-left: 15px;
+  
+}
+
+.text{
+  /* padding: 15px 0px; */
 }
