Add flex properties to links divs

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -31,3 +31,11 @@ input {
   justify-content: space-between;
   align-items: center;
 }
+
+.left-links{
+  display: flex;
+}
+
+.right-links{
+  display: flex;
+}
