Add flex properties to footer div and set footer li margin-left to 20px

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -56,3 +56,14 @@ ul{
 .content{
   text-align: center;
 }
+
+.footer{
+  background: #eeeeee;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.footer li{
+  margin-left: 20px;
+}
