Set all li elements margin-left to 20px

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -36,7 +36,7 @@ ul{
   align-items: center;
 }
 
-.header li{
+li{
   margin-left: 20px;
 }
 
@@ -62,8 +62,4 @@ a{
   display: flex;
   justify-content: space-between;
 
-}
-
-.footer li{
-  margin-left: 20px;
 }
