Set ul margin/padding to 0 to center; remove bullet points

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -34,3 +34,18 @@ body {
   display: flex;
  
 }
+
+ul{
+  list-style-type: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+/* a{
+  text-decoration: none;
+  color: white;
+}
+
+li{
+  padding: 7px;
+} */
