--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -17,6 +17,11 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+
 }
 
 .sidebar {
@@ -32,8 +37,15 @@ body {
 }
 .container{
   display: flex;
+  
  
 }
+/* 
+.cardGroup{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+} */
 
 ul{
   list-style-type: none;
