--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -35,6 +35,7 @@ body {
   background: royalblue;
   box-sizing: border-box;
   flex-shrink: 0;
+  padding: 16px;
 }
 
 .card {
@@ -68,4 +69,5 @@ a{
 
 li{
   padding: 7px;
+  font-size: 24px;
 }
