--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -42,6 +42,7 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  
 }
 
 .container{
@@ -49,12 +50,10 @@ body {
   
  
 }
-/* 
+
 .cardGroup{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-} */
+  padding: 48px;
+}
 
 ul{
   list-style-type: none;
